[tool.poetry]
name = "Foodie Finder"
version = "0.1.0"
description = ""
authors = ["vladislav <ilusevichvl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pydantic-settings = "^2.6.1"
SQLAlchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.10.3"}
alembic = "^1.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
